[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
#name = "alethic-ism-db"
#description = "Alethic - Instruction-Based State Machine (Python DB SDK)"

[tool.setuptools_scm]
version_file = "_version.py"
local_scheme = "no-local-version"
